engine-net-2/examples/Errors/ProcedureParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec { (i:int)=p(42) }

quit
